--- a/deploy/crds/infinispan.org_infinispans_crd.yaml
+++ b/deploy/crds/infinispan.org_infinispans_crd.yaml
@@ -640,7 +640,7 @@ spec:
             dependencies:
               description: External dependencies needed by the Infinispan cluster
               properties:
-                customLibrariesPVName:
+                volume:
                   description: Name of the persistent volumes with custom libraries
                   type: string
               type: object
