--- a/deploy/crds/infinispan.org_infinispans_crd.yaml
+++ b/deploy/crds/infinispan.org_infinispans_crd.yaml
@@ -640,8 +640,8 @@ spec:
             dependencies:
               description: External dependencies needed by the Infinispan cluster
               properties:
-                volume:
-                  description: Name of the persistent volumes with custom libraries
+                volumeClaimName:
+                  description: Name of the persistent volume claim with custom libraries
                   type: string
               type: object
             expose:
