--- a/documentation/asciidoc/topics/yaml/custom_labels.yaml
+++ b/documentation/asciidoc/topics/yaml/custom_labels.yaml
@@ -8,8 +8,10 @@ metadata:
     infinispan.org/podTargetLabels: pod-label1, pod-label2
   labels:
     # Add values for your labels.
-    svc-label1: svc-value2
-    pod-label1: pod-value2
-    # The operator does not attach these labels and values to resources.
+    svc-label1: svc-value1
+    svc-label2: svc-value2
+    pod-label1: pod-value1
+    pod-label2: pod-value2
+    # The operator does not attach these labels to pods.
     my-label: my-value
     environment: development
