--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ dist: focal
 os: linux
 
 before_install:
+  - sudo apt-get install -y skopeo jq
   - |
     if [ "$TRAVIS_PULL_REQUEST" != "false" ] ; then
       git fetch origin $TRAVIS_BRANCH
