--- a/documentation/asciidoc/topics/yaml/basic_auth.yaml
+++ b/documentation/asciidoc/topics/yaml/basic_auth.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 stringData:
-  username: developer <1>
+  username: operator <1>
   password: dIRs5cAAsHIeeRIL <2>
 kind: Secret
 metadata:
