--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -50,6 +50,14 @@ rules:
   verbs:
   - create
 - apiGroups:
+  - "events.k8s.io"
+  - ""
+  resources:
+  - events
+  verbs:
+  - create
+  - patch
+- apiGroups:
   - apps
   resources:
   - replicasets
