--- a/documentation/asciidoc/topics/yaml/datagrid_service.yaml
+++ b/documentation/asciidoc/topics/yaml/datagrid_service.yaml
@@ -23,10 +23,10 @@ spec:
         url: openshift://api.azure.host:6443
         secretName: azure-token
       - name: aws
-        # Specifies the cluster name at the backup location if does not match the local cluster name.
-        clusterName: {example_crd_name} <6>
-        # Specifies the cluster namespace at the backup location if does not match the local cluster.
-        namespace: {example_namespace} <7>
+        # Specifies the cluster name at the backup location.
+        clusterName: {example_crd_name}
+        # Specifies the namespace for the cluster at the backup location.
+        namespace: {example_namespace}
         url: openshift://api.aws.host:6443
         secretName: aws-token
   # Configures authentication and encryption.
