Providing Infinispan console URI in status field fixes #730

--- a/deploy/crds/infinispan.org_infinispans_crd.yaml
+++ b/deploy/crds/infinispan.org_infinispans_crd.yaml
@@ -823,6 +823,8 @@ spec:
                 - type
                 type: object
               type: array
+            consoleUrl:
+              type: string
             podStatus:
               properties:
                 ready:
