--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -1043,6 +1043,8 @@ spec:
                 - type
                 type: object
               type: array
+            consoleUrl:
+              type: string
             podStatus:
               properties:
                 ready:
