--- a/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
@@ -59,7 +59,18 @@ metadata:
             },
             "path": "asdasd"
           }
-        }
+        },
+        {
+          "apiVersion": "infinispan.org/v2alpha1",
+          "kind": "Batch",
+          "metadata": {
+            "name": "example-batch",
+          },
+          "spec": {
+            "cluster": "example-infinispan",
+            "config": "create cache --template=org.infinispan.DIST_SYNC batch-cache"
+          }
+        },
       ]
     capabilities: Full Lifecycle
     categories: Database
@@ -123,6 +134,30 @@ spec:
             path: adminAuth.secretName
             x-descriptors:
               - 'urn:alm:descriptor:io.kubernetes:Secret'
+      - description: Batch is the Schema for the batches API
+        kind: Batch
+        name: batches.infinispan.org
+        version: v2alpha1
+        displayName: Batch
+        specDescriptors:
+          - displayName: Cluster name
+            description: Infinispan cluster name
+            path: cluster
+            x-descriptors:
+              - 'urn:alm:descriptor:io.kubernetes:infinispan.org:v1:Infinispan'
+          - displayName: Config command
+            description: List of commands to be executed
+            path: config
+          - displayName: ConfigMap name
+            description: Name if the ConfigMap containing th List of commands to be executed
+            path: configMap
+        statusDescriptors:
+          - description: Current state of the batch operation
+            displayName: Batch Status
+            path: phase
+          - description: The reason for any batch related failures
+            displayName: Batch reason
+            path: reason
       - description: Infinispan is the Schema for the infinispans API
         kind: Infinispan
         name: infinispans.infinispan.org
