ISPN-12853 grafana dashboard docs

--- a/documentation/asciidoc/topics/yaml/basic_auth.yaml
+++ b/documentation/asciidoc/topics/yaml/basic_auth.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 stringData:
-  username: operator <1>
-  password: dIRs5cAAsHIeeRIL <2>
+  username: operator # The operator user.
+  password: O9R95c56fI4WhGeW # Corresponding password.
 kind: Secret
 metadata:
   name: basic-auth
