--- a/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
@@ -64,13 +64,13 @@ metadata:
           "apiVersion": "infinispan.org/v2alpha1",
           "kind": "Batch",
           "metadata": {
-            "name": "example-batch",
+            "name": "example-batch"
           },
           "spec": {
             "cluster": "example-infinispan",
             "config": "create cache --template=org.infinispan.DIST_SYNC batch-cache"
           }
-        },
+        }
       ]
     capabilities: Full Lifecycle
     categories: Database
