--- a/deploy/crds/infinispan.org_backups_crd.yaml
+++ b/deploy/crds/infinispan.org_backups_crd.yaml
@@ -19,14 +19,10 @@ spec:
       description: Backup is the Schema for the backups API
       properties:
         apiVersion:
-          description: 'APIVersion defines the versioned schema of this representation
-            of an object. Servers should convert recognized schemas to the latest
-            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+          description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
           type: string
         kind:
-          description: 'Kind is a string value representing the REST resource this
-            object represents. Servers may infer this from the endpoint the client
-            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+          description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
           type: string
         metadata:
           type: object
@@ -36,8 +32,7 @@ spec:
             cluster:
               type: string
             container:
-              description: InfinispanContainerSpec specify resource requirements per
-                container
+              description: InfinispanContainerSpec specify resource requirements per container
               properties:
                 cpu:
                   type: string
@@ -49,8 +44,7 @@ spec:
             resources:
               properties:
                 cacheConfigs:
-                  description: Deprecated and to be removed on subsequent release.
-                    Use .Templates instead.
+                  description: Deprecated and to be removed on subsequent release. Use .Templates instead.
                   items:
                     type: string
                   type: array
@@ -67,8 +61,7 @@ spec:
                     type: string
                   type: array
                 scripts:
-                  description: Deprecated and to be removed on subsequent release.
-                    Use .Tasks instead.
+                  description: Deprecated and to be removed on subsequent release. Use .Tasks instead.
                   items:
                     type: string
                   type: array
@@ -89,7 +82,7 @@ spec:
                   type: string
               type: object
           required:
-          - cluster
+            - cluster
           type: object
         status:
           description: BackupStatus defines the observed state of Backup
@@ -98,18 +91,17 @@ spec:
               description: State indicates the current state of the backup operation
               type: string
             pvc:
-              description: The name of the created PersistentVolumeClaim used to store
-                the backup
+              description: The name of the created PersistentVolumeClaim used to store the backup
               type: string
             reason:
               description: Reason indicates the reason for any backup related failures.
               type: string
           required:
-          - phase
+            - phase
           type: object
       type: object
   version: v2alpha1
   versions:
-  - name: v2alpha1
-    served: true
-    storage: true
+    - name: v2alpha1
+      served: true
+      storage: true
