XSite docs set log level to fatal instead of error #936

--- a/documentation/asciidoc/topics/yaml/cr_backup_site_automatic.yaml
+++ b/documentation/asciidoc/topics/yaml/cr_backup_site_automatic.yaml
@@ -19,4 +19,4 @@ spec:
   logging:
     categories:
       org.jgroups.protocols.TCP: error <10>
-      org.jgroups.protocols.relay.RELAY2: fatal <11>
+      org.jgroups.protocols.relay.RELAY2: error <11>
