--- a/documentation/asciidoc/topics/yaml/cr_backup_site_manual.yaml
+++ b/documentation/asciidoc/topics/yaml/cr_backup_site_manual.yaml
@@ -15,4 +15,4 @@ spec:
   logging:
     categories:
       org.jgroups.protocols.TCP: error <7>
-      org.jgroups.protocols.relay.RELAY2: fatal <8>
+      org.jgroups.protocols.relay.RELAY2: error <8>
