--- a/documentation/asciidoc/topics/yaml/xsite_logging.yaml
+++ b/documentation/asciidoc/topics/yaml/xsite_logging.yaml
@@ -3,4 +3,4 @@ spec:
   logging:
     categories:
       org.jgroups.protocols.TCP: error
-      org.jgroups.protocols.relay.RELAY2: fatal
+      org.jgroups.protocols.relay.RELAY2: error
