Delete verb missing from infinispan.org role #945

--- a/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
@@ -440,6 +440,7 @@ spec:
                 - create
                 - update
                 - patch
+                - delete
             - apiGroups:
                 - integreatly.org
               resources:
