--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -737,6 +737,15 @@ spec:
                       type: string
                     certServiceName:
                       type: string
+                    clientCert:
+                      description: ClientCertType specifies a client certificate validation mechanism.
+                      enum:
+                        - None
+                        - Authenticate
+                        - Validate
+                      type: string
+                    clientCertSecretName:
+                      type: string
                     type:
                       description: CertificateSourceType specifies all the possible sources for the encryption certificate
                       enum:
@@ -907,6 +916,15 @@ spec:
                     certSecretName:
                       type: string
                     certServiceName:
+                      type: string
+                    clientCert:
+                      description: ClientCertType specifies a client certificate validation mechanism.
+                      enum:
+                        - None
+                        - Authenticate
+                        - Validate
+                      type: string
+                    clientCertSecretName:
                       type: string
                     type:
                       description: CertificateSourceType specifies all the possible sources for the encryption certificate
