--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -798,6 +798,9 @@ spec:
               properties:
                 strategy:
                   description: Policy represent the current upgrade policy for this cluster
+                  enum:
+                    - Manual
+                    - Latest
                   type: string
               type: object
           required:
