Automatically Create Cluster ServiceMonitor fixes #959

--- a/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
@@ -413,7 +413,10 @@ spec:
                 - servicemonitors
               verbs:
                 - get
+                - list
+                - watch
                 - create
+                - delete
             - apiGroups:
                 - infinispan.org
               resources:
