--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -113,7 +113,10 @@ rules:
   - servicemonitors
   verbs:
   - get
+  - list
+  - watch
   - create
+  - delete
 - apiGroups:
   - infinispan.org
   resources:
