--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -99,7 +99,10 @@ rules:
   - servicemonitors
   verbs:
   - get
+  - list
+  - watch
   - create
+  - delete
 - apiGroups:
   - infinispan.org
   resources:
