moved func and fixed k8s tags

--- a/deploy/crds/infinispan.org_infinispans_crd.yaml
+++ b/deploy/crds/infinispan.org_infinispans_crd.yaml
@@ -403,6 +403,8 @@ spec:
                 cacheEntriesTopic:
                   description: CacheEntriesTopic is the name of the topic on which events will be published
                   type: string
+              required:
+                - bootstrapServers
               type: object
             container:
               description: InfinispanContainerSpec specify resource requirements per container
