Cloud Event integration #962 (#964)

--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -611,6 +611,21 @@ spec:
                 - minMemUsagePercent
                 - minReplicas
               type: object
+            cloudEvents:
+              description: InfinispanCloudEvents describes how Infinispan is connected with Cloud Event, see Kafka docs for more info
+              properties:
+                acks:
+                  description: Acks configuration for the producer ack-value
+                  type: string
+                bootstrapServers:
+                  description: BootstrapServers is comma separated list of boostrap server:port addresses
+                  type: string
+                cacheEntriesTopic:
+                  description: CacheEntriesTopic is the name of the topic on which events will be published
+                  type: string
+              required:
+                - bootstrapServers
+              type: object
             container:
               description: InfinispanContainerSpec specify resource requirements per container
               properties:
