Type field in InfinispanServiceSpec should validates with enum and be an optional #920

--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -785,9 +785,10 @@ spec:
                     - local
                   type: object
                 type:
+                  enum:
+                    - DataGrid
+                    - Cache
                   type: string
-              required:
-                - type
               type: object
           required:
             - replicas
