--- a/deploy/crds/infinispan.org_infinispans_crd.yaml
+++ b/deploy/crds/infinispan.org_infinispans_crd.yaml
@@ -564,9 +564,10 @@ spec:
                     - local
                   type: object
                 type:
+                  enum:
+                    - DataGrid
+                    - Cache
                   type: string
-              required:
-                - type
               type: object
           required:
             - replicas
