Add patch verb for secrets

--- a/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
@@ -336,6 +336,7 @@ spec:
                 - create
                 - update
                 - delete
+                - patch
             - apiGroups:
                 - ""
               resources:
