Grafana Dashboard and ServiceMonitor CR's missing update role permissions fixes #1000

--- a/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
@@ -416,6 +416,7 @@ spec:
                 - list
                 - watch
                 - create
+                - update
                 - delete
             - apiGroups:
                 - infinispan.org
@@ -451,6 +452,7 @@ spec:
                 - list
                 - watch
                 - create
+                - update
                 - delete
           serviceAccountName: infinispan-operator
       clusterPermissions:
