--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -102,6 +102,7 @@ rules:
   - list
   - watch
   - create
+  - update
   - delete
 - apiGroups:
   - infinispan.org
@@ -137,4 +138,5 @@ rules:
     - list
     - watch
     - create
+    - update
     - delete
