--- a/documentation/asciidoc/topics/yaml/custom_code_pvc.yaml
+++ b/documentation/asciidoc/topics/yaml/custom_code_pvc.yaml
@@ -4,7 +4,7 @@ metadata:
   name: datagrid-libs
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 100Mi
