sent log to the events system #346

--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -44,6 +44,14 @@ rules:
   verbs:
   - create
 - apiGroups:
+  - "events.k8s.io"
+  - ""
+  resources:
+  - events
+  verbs:
+  - create
+  - patch
+- apiGroups:
   - apps
   resources:
   - replicasets
