--- a/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
@@ -358,6 +358,14 @@ spec:
               verbs:
                 - create
             - apiGroups:
+                - "events.k8s.io"
+                - ""
+              resources:
+                - events
+              verbs:
+                - create
+                - patch
+            - apiGroups:
                 - apps
               resources:
                 - replicasets
