--- a/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
@@ -340,6 +340,14 @@ spec:
             - apiGroups:
                 - ""
               resources:
+                - serviceaccounts
+              verbs:
+                - get
+                - list
+                - watch
+            - apiGroups:
+                - ""
+              resources:
                 - pods/log
               verbs:
                 - get
