--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -24,6 +24,14 @@ rules:
   - delete
   - patch
 - apiGroups:
+    - ""
+  resources:
+    - serviceaccounts
+  verbs:
+    - get
+    - list
+    - watch
+- apiGroups:
   - ""
   resources:
     - pods/log
