--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_install:
       }
     fi
 
+
 jobs:
   include:
     - stage: "Unit Test and Go linters (golangci-lint) run"
@@ -30,13 +31,17 @@ jobs:
         - go mod vendor
         - make unit-test
         - make lint
-    - stage: "Test"
-      name: "Core and Multi-namespace tests"
+    # set yaml anchors and alias for stage
+    - &core_tests
+      stage: "Core and Multi-namespace tests"
       services:
         - docker
-      env:
-        - KIND_VERSION=v0.9.0
+      # set yaml anchors and alias for node environment
+      env: &kind_node_1_17
+        - KIND_VERSION=v0.11.0
+        - KIND_NODE_VERSION="v.1.17.17@sha256:596ab0698618c429a57be66e712deac68c819a872fa8816d0195cfd691717c70"
         - OSDK_FORCE_RUN_MODE=local
+        - METALLB_VERSION=v0.9.6
       before_script:
         - source ./build/travis/configure-travis-ci.sh
         - go mod vendor
@@ -51,13 +56,12 @@ jobs:
         - df -h
         - docker ps -a
         - for log in $(docker ps -qa | xargs); do docker logs --tail 500 $log; done
-    - # stage name not required, will continue to use `Test`
-      name: "Backup/Restore tests"
+
+    - &backup_tests
+      stage: "Backup/Restore tests"
       services:
         - docker
-      env:
-        - KIND_VERSION=v0.9.0
-        - OSDK_FORCE_RUN_MODE=local
+      env: *kind_node_1_17
       before_script:
         - source ./build/travis/configure-travis-ci.sh
         - go mod vendor
@@ -71,13 +75,13 @@ jobs:
         - df -h
         - docker ps -a
         - for log in $(docker ps -qa | xargs); do docker logs --tail 500 $log; done
-    - # stage name not required, will continue to use `Test`
-      name: "Cross-Site multiple clusters test"
+
+    - &cross_site_scripts
+      stage: "Cross-Site multiple clusters test"
       services:
         - docker
-      env:
-        - KIND_VERSION=v0.9.0
-        - METALLB_VERSION=v0.9.6
+      env: *kind_node_1_17
+
       before_script:
         - sudo snap install yq
         - source build/travis/configure-travis-ci-xsite.sh
@@ -89,3 +93,18 @@ jobs:
         - df -h
         - docker ps -a
         - for log in $(docker ps -qa | xargs); do docker logs --tail 500 $log; done
+
+
+   # repeate tests for v1.16 kind node
+    - <<: *core_tests
+      env: &kind_node_1_16
+        - KIND_VERSION=v0.11.0
+        - KIND_NODE_VERSION="v1.16.15@sha256:a89c771f7de234e6547d43695c7ab047809ffc71a0c3b65aa54eda051c45ed20"
+        - OSDK_FORCE_RUN_MODE=local
+        - METALLB_VERSION=v0.9.6
+
+    - <<: *cross_site_scripts
+      env: *kind_node_1_16
+
+    - <<: *backup_tests
+      env: *kind_node_1_16
